# nfc_tag_id_reader

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
config/: config.yaml
src/: AppConfig.h  MQTTHandler.cpp  MQTTHandler.h  NFCHandler.cpp  NFCHandler.h  TagId.h  main.cpp
